feat: 책 교환 기능 및 배정 로직 개선
  - rotateBooks()에서 책 초기화 로직 제거 (모임 강제 종료 API에서만 수행)
  - 새로운 라운드 시작 시에만 책 초기화하도록 수정
  - ReadingAssignmentRepository에 findByMember_MemberId(), deleteByGroup_GroupId() 쿼리 메서드 추가
  - RotateBooksResponse DTO 추가 (사용자의 배정 정보 + 다른 모임원 정보)